objects/fferpcore__SequenceRequest__e.object
<CustomObject>
    <fields>
        <fullName>fferpcore__IsContinuation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Diagnostic indication that this event was generated by the SequenceService splitting a large request.</description>
        <label>Is Continuation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsOverflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Diagnostic indication that this event originated from the overflow code in the event processor.</description>
        <label>Is Overflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__SubjectIds__c</fullName>
        <description>Comma separated list or JSON array of record IDs which require sequencing.</description>
        <label>SubjectIds</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Sequence Request</label>
    <pluralLabel>Sequence Requests</pluralLabel>
</CustomObject>